# MLH-Task-2-Team-1

./: .dockerignore  .gitignore  Dockerfile  README.md  build_vercel.py  curl-test.sh  docker-compose.prod.yml  docker-compose.yml  example.env  index.py  pyproject.toml  redeploy-site.sh  run_test.sh
app/: __init__.py  about_us_data.py  education_data.py  hobbies_data.py  places_data.py  work_history_data.py
app/static/js/: hobbies.js  map.js
app/static/styles/: main.css
app/templates/: about_us.html  base.html  education.html  hobbies.html  index.html  map.html  timeline.html  work.html
tests/: test_app.py  test_db.py
user_conf.d/: myportfolio.conf
